src/objects/Zone_Product__c.object
<CustomObject>
    <description>The postage zone is used to determine the postage charge the customer needs to pay for the subscription.</description>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date when the Postage Charge for the Product under a particular zone takes effect.</description>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postage_Charge__c</fullName>
        <label>Postage Charge</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>ZProduct</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ZProduct__c.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Zone Mappings</relationshipLabel>
        <relationshipName>Zone_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zone_Mapping__c</fullName>
        <formula>Zone__r.Name</formula>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>ZProducts</relationshipLabel>
        <relationshipName>Zone_Product</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Zone Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Product__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Postage_Charge__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>For_Verification</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Product__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Postage_Charge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>THE STRAITS TIMES PRINT</value>
        </filters>
        <label>For Verification</label>
    </listViews>
    <listViews>
        <fullName>Local_Rate</fullName>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Product__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Postage_Charge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Zone_Mapping__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Local Rate</label>
    </listViews>
    <listViews>
        <fullName>T_M</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Zone__c</columns>
        <columns>Product__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Postage_Charge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>startsWith</operation>
            <value>T</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>startsWith</operation>
            <value>M</value>
        </filters>
        <label>T &amp; M</label>
    </listViews>
    <nameField>
        <displayFormat>ZP-{00000000}</displayFormat>
        <label>Zone Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zone Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Effective_Start_Date</fullName>
        <active>true</active>
        <description>Effective Start Date should be a future date</description>
        <errorConditionFormula>Effective_Start_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Effective_Start_Date__c</errorDisplayField>
        <errorMessage>Effective Start Date should be a future date.</errorMessage>
    </validationRules>
</CustomObject>